@@ -1,3 +1,9 @@
+2003-11-25  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extracting.c:
+	* src/sj-extractor.c:
+	Initialise more variables to NULL, thanks teuf.
+
 2003-11-21  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-main.c:
